--- a/style.css
+++ b/style.css
@@ -2,14 +2,27 @@ header {
     background-image: url(https://images.pexels.com/photos/1089438/pexels-photo-1089438.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
     background-size: contain;
     color: magenta;
+    text-align: center;
+    font-size: x-large;
+}
+
+header li {
+    background-color: transparent;
+    display: inline;
+    font-size: larger;
+    text-align: center;
+    padding: 10px;
 }
 
 a {
     color: magenta;
+    background-color: transparent;
+    text-align: center;
+    text-decoration-line: none;
 }
 
 body {
     background-color: rgb(36, 31, 31);
-    color: limegreen;
+    color: rgb(70, 182, 70);
 }
 /* example of CSS comment */
