--- a/Home-Page/style.css
+++ b/Home-Page/style.css
@@ -17,7 +17,7 @@ a {
     font-weight: 300; 
     letter-spacing: 2px; 
     text-decoration: none; 
-    background: #0026e4
+    background: #0026e4;
     padding: 5px 5px; 
     display: inline-block; 
     width: 100%; 
@@ -34,7 +34,7 @@ a {
 .tab-bar { 
     max-width: 1200px; 
     margin: 0 auto;
-    padding: 0px
+    padding: 0px;
     background-color: rgb(86, 31, 153);
 }
 
