Changed styling of h2

--- a/Home-Page/style.css
+++ b/Home-Page/style.css
@@ -18,7 +18,10 @@ p {
 
 
 h2 {
-    color: #0026e4;
+    color: #1f45ff;
+    font-size: 50px;
+    text-justify: center;
+    text-align: center;
 }
 
 
