Added CSS styling for universal h3

--- a/Home-Page/style.css
+++ b/Home-Page/style.css
@@ -24,6 +24,13 @@ h2 {
     text-align: center;
 }
 
+h2 {
+    color: #1f45ff;
+    font-size: 30px;
+    text-justify: center;
+    text-align: center;
+}
+
 
 /* Menu, Logo, Header Stars Here */
 
